@@ -1,3 +1,5 @@
+DIST emacs-updater-1.0_rc1.tar.bz2 4046 RMD160 cf89cbeb3f84f6e283071cb04c8eac526a10f34c SHA1 67f6a4671070136be78ff6906f7824062845b1cd SHA256 c55ccfd69e6d27384524704bd81f9aeb9b9a2786797b23daf69c98a7a540a222
+EBUILD emacs-updater-1.0_rc1.ebuild 601 RMD160 7f5e972c79577b2be0852ed8d4cef0a2d0e04060 SHA1 0932122ac292a273c33dc03b23d9d18b8ffd89ef SHA256 cb396479d4ec110f984972c84db1baddb16a4e40eb82b0278a53c8002c38ebf5
 EBUILD emacs-updater-9999.ebuild 668 RMD160 a68104496febdd4b933aa410d0e560b6d9d88068 SHA1 eba258942f89d6cec5247f68fe5e7d74f7d97ff8 SHA256 bbe3ea69f6bbfccd3641e7f7dd486e99194f4d7e49a439f9e62cca9f16e7defb
-MISC ChangeLog 349 RMD160 62ead48e14d914ad70f2d2ab1dbdac652dfb4ba0 SHA1 1646c7285afe7e56be1bb4df037553627292bfc1 SHA256 419e1453a75c43b4802f7df1cd1c6d62853ebaddb14da10c6ec9fc837049715f
+MISC ChangeLog 518 RMD160 254ecd86517c764b7fc620be33717e722077c5ad SHA1 69d7cfc69844f3ab27414f033ba47da92725701d SHA256 33bf12d7c1d58b2fa0bbfdb17717257eb91bdbabf0ea3a035d2348cccb8ca915
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
