@@ -1,3 +1,5 @@
+DIST eselect-emacs-1.5.tar.bz2 7479 RMD160 2be6242468d282125a0f4b26af235bef40a1d9aa SHA1 24143c71d34eef87b1e39342d4635c996227da8a SHA256 2bfede7fa6bfa532866ed8a1f23f7cc12244d6c59e776d3d3e19bf8e09665f5d
+EBUILD eselect-emacs-1.5-r1.ebuild 660 RMD160 2218ff65c603545a69ec5639c3dd55fc471d7b70 SHA1 829890fe0d607654d0dad29dbe0c09d52b52cf81 SHA256 6324bdae12ea58c56c6b06bb9e2d537f30ff6aefe1cf4ab76078dd9356f4ff9f
 EBUILD eselect-emacs-9999-r1.ebuild 756 RMD160 68ce1e1ad72c1061d11c527de95545624efb79cb SHA1 affa1c7f6c1d2ab43f8fce08137b4589da79d241 SHA256 6342eac8f3708bd95ce2136f7a17103e29a20b42d523312e4cab80ee550b082c
-MISC ChangeLog 855 RMD160 4f26e318dda831c3d6378e7ba8a11cf12fbf2f24 SHA1 b92e747caab441be5e329097e8b10d4269c75bbd SHA256 7ef9aad9682bf7f4b91348d5ad74c740850ff892e6df8b0d7872bb708fb13ca4
+MISC ChangeLog 1046 RMD160 c89243c6b85c00b30c3595683ccf9dc5ffe902dc SHA1 f7339008153db2fabe83ccdaafecb96ab5863b1b SHA256 d4f8db97a2ac2c6baf85c9ee9dce6d091340fb2874053a08baf308d1424b76df
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
